# lan_sync_draft

./: .gitignore  CMakeLists.txt  todo.txt
doc/: .gitignore  architect.drawio  class.drawio  net_framework_class.drawio  readme.md
etc/: common.cmake  config.cmake
example/: example.cmake  example_common.h  tcp_cli.cc  tcp_srv.cc  timer.cc  udp_cli.cc  udp_srv.cc
plugins/wireshark/: example.pcapng  lan_sync_proto.lua  readme.md
resources/: properties.properties
src/: end_point.cc  end_point.h  logic_core.cc  logic_core.h  main.cc  network_adapter.cc  network_adapter.h  network_context.cc  network_context.h  proto_server.cc  proto_server.h  proto_session.cc  proto_session.h  proto_session_manager.cc  proto_session_manager.h  resource_manager.cc  resource_manager.h  road_maintainer.cc  road_maintainer.h  sync.cmake  udp_cli_trigger.cc  udp_cli_trigger.h
src/buf/: abs_buf.cc  abs_buf.h  buf_base_on_event.cc  buf_base_on_event.h
src/conf/: properties_parse.cc  properties_parse.h  usage.cc  usage.h
src/log/: log.cc  (+1 more)
test/: CMakeLists.txt  framework_engine_for_test.cc  framework_engine_for_test.h  net_framework_engine_for_test.cc  net_framework_engine_for_test.h  test.cmake
test/dep/: framework_engine_for_test.cc  framework_engine_for_test.h  setup_road_test.cc  setup_road_test.h  test_common.cc  test_common.h
test/endpoint/: me_tcpcli.cc  me_tcpsrv.cc  setup_road_test.cc  setup_road_test.h
test/net/: net_framework_engine_test.cc
test/sit/: .gitignore  Makefile  clean.sh  exec.sh  readme.md  run.sh  veth0.properties  veth1.properties
test/sit/utils/: hash.sh  io.sh  system.sh
test/task/: task_test.cc  test_task_manager.h
test/uint-test/: resource_manager_base_filesystem_test.cc  resource_manager_test.cc
test/uint-test/dep/: framework_engine_for_test.cc  framework_engine_for_test.h  setup_road_test.cc  setup_road_test.h  test_common.cc  test_common.h  test_sync_proto.h
test/uint-test/endpoint/: me_tcpcli.cc  me_tcpsrv.cc
test/uint-test/net/: net_framework_engine_test.cc
test/uint-test/task/: task_test.cc  test_task_manager.h
(+82 files in other folders)
